# boxes-tui

./: .gitignore  LICENSE  README.md  TODO  TODO.json  convert.sh  pyproject.toml  run-example.sh  run-todo.sh
.github/workflows/: publish-package.yml  publish-to-pypi.yml
.scripts/: set_version.py
examples/: example.py  example2.py  todo.py
notebooks/: looks.ipynb
notebooks/widgets/: widget.ipynb
src/: example.py  run-example.sh
src/boxes_tui/: __init__.py  exceptions.py  inputs.py  logger.py  looks.py  shared_vars.py  wrapper.py
src/boxes_tui/widgets/: __init__.py  basic.py  boxes.py  global_widget.py  layouts.py  widget.py
